startup-nextcloud/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: startup-nextcloud-http
  labels:
    app: nextcloud
spec:
  rules:
    - host: nextcloud.startup.celestium.life
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: startup-nextcloud
                port:
                  number: 8080
